--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wbpack Exercise</title>
+    <title>Movie Site</title>
 </head>
 <body>
-    <h1>Hello webpack!</h1>
+    <header>
+        <nav class="navBar">
+            <div>Logo</div>
+            <ul class="navList">
+                <li><a href="index.html">Movies</a></li>
+                <li><a href="index.html">Cast</a></li>
+                <li><a href="index.html">About</a></li>
+            </ul>
+    </header>
+    <section class="movieList">
+
+    </section>    
 </body>
 </html>
