--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
     </header>
     <section class="movieList">
 
-    </section>    
+    </section>
+    <footer>
+        <div>Created by Asha and Trust....</div>
+    </footer>
 </body>
 </html>
