Add code to fetch and display movies

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html">About</a></li>
             </ul>
     </header>
-    <section class="movieList">
+    <section class="movieList" id="movieList">
 
     </section>
     <footer>
