Add comment pop up for listed movies

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,24 @@
     <section class="movieList" id="movieList">
 
     </section>
+    <section class="hide" id="popUp">
+        
+            <div class="popUpContent">
+                <span class="close">&times;</span>
+                <div class="popContentLoad"></div>   
+                <div class="commentContainer">                 
+                </div>
+                <div class="commentForm">                    
+                    <form action="" class="newComment">
+                        <h3 class="comment">Comment</h3>
+                        <input type="text" placeholder="Your name" class="inputName input">                        
+                        <textarea cols="30" rows="4" placeholder="Type your comment" class="textarea input"></textarea>
+                        <button type="submit" class="submitComment">Submit</button>
+                    </form>
+                </div>
+            </div>
+    </section>
+    
     <footer>
         <div>Created by Asha and Trust....</div>
     </footer>
