--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,8 @@
                 <div class="commentForm">                    
                     <form action="" class="newComment">
                         <h3 class="comment">Comment</h3>
-                        <input type="text" placeholder="Your name" class="inputName input">                        
-                        <textarea cols="30" rows="4" placeholder="Type your comment" class="textarea input"></textarea>
+                        <input id="name" type="text" placeholder="Your name" class="inputName input">                        
+                        <textarea id="comment" cols="30" rows="4" placeholder="Type your comment" class=" input"></textarea>
                         <button type="submit" class="submitComment">Submit</button>
                     </form>
                 </div>
