Fix Style issues

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
     <section class="movieList" id="movieList">
 
     </section>
-    <section class="hide" id="popUp">
+    <section  id="popUp">
         
-            <div class="popUpContent">
+            <div class="popUpContent hide">
                 <span class="close">&times;</span>
                 <div class="popContentLoad"></div>   
                 <div class="commentContainer">                 
