Add styles for comment pop up

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
     </section>
     <section  id="popUp">
-        
+        <div class="background hide" id="background"></div>
             <div class="popUpContent hide">
                 <span class="close">&times;</span>
                 <div class="popContentLoad"></div>  
